# worldpath

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  graph.c  graph.h  makefile  queue.c  queue.h  test.sh  vcpkg.json
assets/: convert.sh  dot.xcf
include/: graph.h  hash_table.h  queue.h  world.h
nitrofiles/bg/: nfl.img  nfl.map  nfl.pal
nitrofiles/sprite/: dot.img  dot.pal
src/: graph.c  hash_table.c  queue.c  world.c
test/: countsegfaults.sh  test.c
world_map/: borders.csv  clean-borders.csv  clean-countries.csv  countries.csv  countryCoordinates.py  countrypositions.csv  genCode  generateCSV.py  generatedCode  regexes  worldMap.py
